[gd_scene load_steps=49 format=4 uid="uid://cq2fy70xef7ei"]

[ext_resource type="Script" uid="uid://xx1wiov37kjh" path="res://scenes/world/world.gd" id="1_6hctx"]
[ext_resource type="PackedScene" uid="uid://dh4bkj6mne23j" path="res://scenes/game/maps/ground_tile_map_layer.tscn" id="2_ues17"]
[ext_resource type="Texture2D" uid="uid://dr58l8fmnfbr8" path="res://assets/tiles/walls/wall_w.png" id="3_xq18t"]
[ext_resource type="Texture2D" uid="uid://djsd12yixqcnd" path="res://assets/tiles/walls/wall_nw.png" id="4_x0nq1"]
[ext_resource type="Texture2D" uid="uid://c2u24pcpcb65s" path="res://assets/tiles/walls/wall_nw_w.png" id="5_rwifv"]
[ext_resource type="Texture2D" uid="uid://beb0yfr6kl7yi" path="res://assets/tiles/walls/wall_sw_so.png" id="6_ckok1"]
[ext_resource type="Script" uid="uid://dmau1rh153fsa" path="res://scenes/game/maps/wall_tile_map_layer.gd" id="7_2x71e"]
[ext_resource type="Texture2D" uid="uid://b52ml4syvr0bp" path="res://assets/tiles/buildings/building_stone_01.png" id="8_wnndm"]
[ext_resource type="Texture2D" uid="uid://cher7bis77ehd" path="res://assets/tiles/buildings/building_stone_02.png" id="9_26xou"]
[ext_resource type="Texture2D" uid="uid://opr210nnyx0i" path="res://assets/tiles/buildings/building_wood_01.png" id="10_jyr8v"]
[ext_resource type="Texture2D" uid="uid://bys5pajljo7cw" path="res://assets/tiles/buildings/building_wood_02.png" id="11_5o5dd"]
[ext_resource type="Texture2D" uid="uid://vvsqrcbgo0xc" path="res://assets/tiles/buildings/building_wood_03.png" id="12_d0ajt"]
[ext_resource type="Texture2D" uid="uid://bkxehutr503f2" path="res://assets/tiles/buildings/woods.png" id="13_fymcc"]
[ext_resource type="Texture2D" uid="uid://ydo6mryviyos" path="res://assets/tiles/buildings/house.png" id="14_lbnhc"]
[ext_resource type="Script" uid="uid://cg8f2xiajwc44" path="res://scenes/game/maps/building_tile_map_layer.gd" id="15_sygq6"]
[ext_resource type="Texture2D" uid="uid://72tdw5k8ingr" path="res://assets/tiles/buildings/orchard.png" id="16_0wrxw"]
[ext_resource type="Script" uid="uid://cc2pavbgwgo06" path="res://scenes/game/maps/terrain_tile_map_layer.gd" id="17_cmg7y"]
[ext_resource type="Texture2D" uid="uid://d1bbds1iph7gl" path="res://assets/tiles/ground/fog_of_war.png" id="18_2x71e"]
[ext_resource type="PackedScene" uid="uid://rsqpaeas8ic5" path="res://scenes/game/units/unit.tscn" id="19_sh7a8"]
[ext_resource type="Texture2D" uid="uid://dtx0tgn2cjgiu" path="res://assets/ui/objective_tile.png" id="20_7mx70"]
[ext_resource type="PackedScene" uid="uid://dry4o5rpga2ec" path="res://scenes/ui/start_screen.tscn" id="21_1cxds"]
[ext_resource type="PackedScene" uid="uid://b84f65gu8hp6e" path="res://scenes/ui/result_screen.tscn" id="22_2m0ga"]
[ext_resource type="PackedScene" uid="uid://jdf7ewo2axfy" path="res://scenes/ui/ui.tscn" id="23_ues17"]
[ext_resource type="PackedScene" uid="uid://b0cjkqk21ctq3" path="res://scenes/game/input_manager.tscn" id="24_x0nq1"]
[ext_resource type="PackedScene" uid="uid://dy2ockn75uonw" path="res://scenes/game/game_controller.tscn" id="25_rwifv"]
[ext_resource type="PackedScene" uid="uid://b7n8wd6ful6o1" path="res://scenes/game/movement_system.tscn" id="26_26xou"]
[ext_resource type="PackedScene" uid="uid://cf17qriycv82p" path="res://scenes/game/los_renderer.tscn" id="26_rwifv"]
[ext_resource type="PackedScene" uid="uid://c5bxatxtl1pha" path="res://scenes/game/combat_system.tscn" id="27_jyr8v"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_d21ai"]
texture = ExtResource("3_xq18t")
texture_region_size = Vector2i(64, 64)
0:0/next_alternative_id = 2
0:0/0 = 0
0:0/0/custom_data_0 = 2
0:0/0/custom_data_4 = true
0:0/1 = 1
0:0/1/flip_v = true
0:0/1/custom_data_0 = 2
0:0/1/custom_data_1 = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_hqns4"]
texture = ExtResource("4_x0nq1")
texture_region_size = Vector2i(64, 64)
0:0/next_alternative_id = 4
0:0/0 = 0
0:0/0/custom_data_0 = 2
0:0/0/custom_data_5 = true
0:0/1 = 1
0:0/1/flip_v = true
0:0/1/custom_data_0 = 2
0:0/1/custom_data_6 = true
0:0/2 = 2
0:0/2/flip_h = true
0:0/2/custom_data_0 = 2
0:0/2/custom_data_3 = true
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/3/custom_data_0 = 2
0:0/3/custom_data_2 = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_x0ka3"]
texture = ExtResource("5_rwifv")
texture_region_size = Vector2i(64, 64)
0:0/next_alternative_id = 4
0:0/0 = 0
0:0/0/custom_data_0 = 2
0:0/0/custom_data_4 = true
0:0/0/custom_data_5 = true
0:0/1 = 1
0:0/1/flip_h = true
0:0/1/custom_data_0 = 2
0:0/1/custom_data_3 = true
0:0/1/custom_data_4 = true
0:0/2 = 2
0:0/2/flip_v = true
0:0/2/custom_data_0 = 2
0:0/2/custom_data_1 = true
0:0/2/custom_data_6 = true
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/3/custom_data_0 = 2
0:0/3/custom_data_1 = true
0:0/3/custom_data_2 = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ta5nu"]
texture = ExtResource("6_ckok1")
texture_region_size = Vector2i(64, 64)
0:0/next_alternative_id = 2
0:0/0 = 0
0:0/0/custom_data_0 = 2
0:0/0/custom_data_2 = true
0:0/0/custom_data_3 = true
0:0/1 = 1
0:0/1/flip_h = true
0:0/1/custom_data_0 = 2
0:0/1/custom_data_5 = true
0:0/1/custom_data_6 = true

[sub_resource type="TileSet" id="TileSet_0hol4"]
tile_shape = 3
tile_offset_axis = 1
tile_size = Vector2i(64, 64)
custom_data_layer_0/name = "cover"
custom_data_layer_0/type = 2
custom_data_layer_1/name = "n"
custom_data_layer_1/type = 1
custom_data_layer_2/name = "ne"
custom_data_layer_2/type = 1
custom_data_layer_3/name = "se"
custom_data_layer_3/type = 1
custom_data_layer_4/name = "s"
custom_data_layer_4/type = 1
custom_data_layer_5/name = "sw"
custom_data_layer_5/type = 1
custom_data_layer_6/name = "nw"
custom_data_layer_6/type = 1
sources/0 = SubResource("TileSetAtlasSource_d21ai")
sources/1 = SubResource("TileSetAtlasSource_hqns4")
sources/2 = SubResource("TileSetAtlasSource_x0ka3")
sources/4 = SubResource("TileSetAtlasSource_ta5nu")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_1fr6y"]
texture = ExtResource("8_wnndm")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/custom_data_0 = 3

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2hxjc"]
texture = ExtResource("9_26xou")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/custom_data_0 = 3

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ebxd8"]
texture = ExtResource("10_jyr8v")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/custom_data_0 = 2

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2u7jv"]
texture = ExtResource("11_5o5dd")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/custom_data_0 = 2

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_24dk6"]
texture = ExtResource("12_d0ajt")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/custom_data_0 = 2

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_e8dv2"]
texture = ExtResource("13_fymcc")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/custom_data_0 = 1

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0hol4"]
texture = ExtResource("14_lbnhc")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_q6r6c"]
tile_shape = 3
tile_offset_axis = 1
tile_size = Vector2i(64, 64)
custom_data_layer_0/name = "cover"
custom_data_layer_0/type = 2
sources/8 = SubResource("TileSetAtlasSource_0hol4")
sources/0 = SubResource("TileSetAtlasSource_1fr6y")
sources/1 = SubResource("TileSetAtlasSource_2hxjc")
sources/2 = SubResource("TileSetAtlasSource_ebxd8")
sources/3 = SubResource("TileSetAtlasSource_2u7jv")
sources/4 = SubResource("TileSetAtlasSource_24dk6")
sources/5 = SubResource("TileSetAtlasSource_e8dv2")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2nhjh"]
texture = ExtResource("16_0wrxw")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/custom_data_2 = true

[sub_resource type="TileSet" id="TileSet_k73cj"]
tile_shape = 3
tile_offset_axis = 1
tile_size = Vector2i(64, 64)
custom_data_layer_0/name = "woods"
custom_data_layer_0/type = 1
custom_data_layer_1/name = "orchard"
custom_data_layer_1/type = 0
custom_data_layer_2/name = "hindrance"
custom_data_layer_2/type = 1
custom_data_layer_3/name = "blocking"
custom_data_layer_3/type = 1
sources/2 = SubResource("TileSetAtlasSource_2nhjh")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wnndm"]
texture = ExtResource("18_2x71e")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/modulate = Color(1, 1, 1, 0.764706)

[sub_resource type="TileSet" id="TileSet_26xou"]
tile_shape = 3
tile_offset_axis = 1
tile_size = Vector2i(64, 64)
custom_data_layer_0/name = "woods"
custom_data_layer_0/type = 1
custom_data_layer_1/name = "orchard"
custom_data_layer_1/type = 0
custom_data_layer_2/name = "hindrance"
custom_data_layer_2/type = 1
custom_data_layer_3/name = "blocking"
custom_data_layer_3/type = 1
sources/0 = SubResource("TileSetAtlasSource_wnndm")

[sub_resource type="GDScript" id="GDScript_jyr8v"]
script/source = "extends HexagonTileMapLayer
"

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_k73cj"]
texture = ExtResource("20_7mx70")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_rjqkl"]
tile_shape = 3
tile_offset_axis = 1
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_k73cj")

[node name="World" type="Node2D"]
script = ExtResource("1_6hctx")

[node name="TileMapLayers" type="Node2D" parent="."]

[node name="GroundTileMapLayer" parent="TileMapLayers" groups=["tilemaplayers"] instance=ExtResource("2_ues17")]

[node name="WallTileMapLayer" type="TileMapLayer" parent="TileMapLayers" groups=["tilemaplayers"]]
tile_map_data = PackedByteArray("AAACAAEAAAAAAAAAAAACAAMAAAAAAAAAAQAFAAMAAQAAAAAAAQAEAAQAAgAAAAAAAwAJAAMABAAAAAAAAAAKAAMABAAAAAAAAQAKAAIAAgAAAAAAAQALAAEAAgAAAAAAAgAMAAUAAgAAAAAAAAAMAAYAAgAAAAAAAwANAAYAAgAAAAAAAwAOAAcABAAAAAAAAQALAAIAAgAAAAAAAQA=")
tile_set = SubResource("TileSet_0hol4")
script = ExtResource("7_2x71e")
metadata/_edit_lock_ = true

[node name="BuildingTileMapLayer" type="TileMapLayer" parent="TileMapLayers" groups=["tilemaplayers"]]
tile_map_data = PackedByteArray("AAAGAAYAAwAAAAAAAAAIAAUAAgAAAAAAAAAOAAUACAAAAAAAAAATAAQACAAAAAAAAAABAAAAAAAAAAAAAAAGAAIAAQAAAAAAAAAEAAUAAgAAAAAAAAAJAAMAAwAAAAAAAAAKAAMAAwAAAAAAAAAJAAYABAAAAAAAAAAIAAgABQAAAAAAAAAQAAYAAAAAAAAAAAASAAMABAAAAAAAAAAQAAcAAQAAAAAAAAABAAMABAAAAAAAAAABAAIAAgAAAAAAAAANAAMAAQAAAAAAAAAOAAIAAgAAAAAAAAAIAAcABQAAAAAAAAAHAAYABQAAAAAAAAAGAAcABQAAAAAAAAAFAAcABQAAAAAAAAAEAAgABQAAAAAAAAAGAAgABQAAAAAAAAAHAAcABQAAAAAAAAAJAAgABQAAAAAAAAAJAAcABQAAAAAAAAAQAAMABQAAAAAAAAAPAAMABQAAAAAAAAAQAAQABQAAAAAAAAARAAQABQAAAAAAAAARAAMABQAAAAAAAAASAAQABQAAAAAAAAASAAUABQAAAAAAAAAQAAUABQAAAAAAAAARAAIABQAAAAAAAAA=")
tile_set = SubResource("TileSet_q6r6c")
script = ExtResource("15_sygq6")
metadata/_edit_lock_ = true

[node name="TerrainTileMapLayer" type="TileMapLayer" parent="TileMapLayers" groups=["tilemaplayers"]]
tile_map_data = PackedByteArray("AAACAAEAAgAAAAAAAAABAAEAAgAAAAAAAAAFAAIAAgAAAAAAAAACAAIAAgAAAAAAAAAFAAcAAgAAAAAAAAAGAAgAAgAAAAAAAAAEAAYAAgAAAAAAAAAGAAQAAgAAAAAAAAA=")
tile_set = SubResource("TileSet_k73cj")
script = ExtResource("17_cmg7y")
metadata/_edit_lock_ = true

[node name="FogOfWarTileMapLayer" type="TileMapLayer" parent="TileMapLayers" groups=["tilemaplayers"]]
tile_set = SubResource("TileSet_26xou")
script = SubResource("GDScript_jyr8v")
metadata/_edit_lock_ = true

[node name="ObjectiveTileMapLayer" type="TileMapLayer" parent="TileMapLayers" groups=["tilemaplayers"]]
tile_map_data = PackedByteArray("AAAOAAUAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_rjqkl")

[node name="StartScreen" parent="." instance=ExtResource("21_1cxds")]
visible = false

[node name="ResultScreen" parent="." instance=ExtResource("22_2m0ga")]
visible = false

[node name="Ui" parent="." node_paths=PackedStringArray("ground_layer") instance=ExtResource("23_ues17")]
ground_layer = NodePath("../TileMapLayers/GroundTileMapLayer")

[node name="DummyNode2D" type="Node2D" parent="."]

[node name="GameController" parent="." node_paths=PackedStringArray("objective_tilemap", "ground_layer", "fog_of_war_layer") instance=ExtResource("25_rwifv")]
objective_tilemap = NodePath("../TileMapLayers/ObjectiveTileMapLayer")
ground_layer = NodePath("../TileMapLayers/GroundTileMapLayer")
fog_of_war_layer = NodePath("../TileMapLayers/FogOfWarTileMapLayer")

[node name="UnitContainer" type="Node" parent="GameController"]

[node name="Unit" parent="GameController/UnitContainer" node_paths=PackedStringArray("ground_map") instance=ExtResource("19_sh7a8")]
position = Vector2(80, 512)
ground_map = NodePath("../../../TileMapLayers/GroundTileMapLayer")

[node name="Unit10" parent="GameController/UnitContainer" node_paths=PackedStringArray("ground_map") instance=ExtResource("19_sh7a8")]
position = Vector2(80, 192)
ground_map = NodePath("../../../TileMapLayers/GroundTileMapLayer")

[node name="Unit11" parent="GameController/UnitContainer" node_paths=PackedStringArray("ground_map") instance=ExtResource("19_sh7a8")]
position = Vector2(128, 480)
ground_map = NodePath("../../../TileMapLayers/GroundTileMapLayer")

[node name="Unit12" parent="GameController/UnitContainer" node_paths=PackedStringArray("ground_map") instance=ExtResource("19_sh7a8")]
position = Vector2(80, 448)
ground_map = NodePath("../../../TileMapLayers/GroundTileMapLayer")

[node name="Unit2" parent="GameController/UnitContainer" node_paths=PackedStringArray("ground_map") instance=ExtResource("19_sh7a8")]
position = Vector2(128, 160)
ground_map = NodePath("../../../TileMapLayers/GroundTileMapLayer")

[node name="Unit3" parent="GameController/UnitContainer" node_paths=PackedStringArray("ground_map") instance=ExtResource("19_sh7a8")]
position = Vector2(80, 256)
ground_map = NodePath("../../../TileMapLayers/GroundTileMapLayer")

[node name="Unit4" parent="GameController/UnitContainer" node_paths=PackedStringArray("ground_map") instance=ExtResource("19_sh7a8")]
position = Vector2(704, 480)
ground_map = NodePath("../../../TileMapLayers/GroundTileMapLayer")
team = 1

[node name="Unit5" parent="GameController/UnitContainer" node_paths=PackedStringArray("ground_map") instance=ExtResource("19_sh7a8")]
position = Vector2(464, 512)
ground_map = NodePath("../../../TileMapLayers/GroundTileMapLayer")
team = 1

[node name="Unit6" parent="GameController/UnitContainer" node_paths=PackedStringArray("ground_map") instance=ExtResource("19_sh7a8")]
position = Vector2(704, 352)
ground_map = NodePath("../../../TileMapLayers/GroundTileMapLayer")
team = 1

[node name="Unit7" parent="GameController/UnitContainer" node_paths=PackedStringArray("ground_map") instance=ExtResource("19_sh7a8")]
position = Vector2(800, 480)
ground_map = NodePath("../../../TileMapLayers/GroundTileMapLayer")
team = 1

[node name="Unit8" parent="GameController/UnitContainer" node_paths=PackedStringArray("ground_map") instance=ExtResource("19_sh7a8")]
position = Vector2(752, 256)
ground_map = NodePath("../../../TileMapLayers/GroundTileMapLayer")
team = 1

[node name="Unit9" parent="GameController/UnitContainer" node_paths=PackedStringArray("ground_map") instance=ExtResource("19_sh7a8")]
position = Vector2(560, 128)
ground_map = NodePath("../../../TileMapLayers/GroundTileMapLayer")
team = 1

[node name="InputManager" parent="GameController" instance=ExtResource("24_x0nq1")]

[node name="MovementSystem" parent="GameController" instance=ExtResource("26_26xou")]

[node name="CombatSystem" parent="GameController" instance=ExtResource("27_jyr8v")]

[node name="LOSRenderer" parent="GameController" instance=ExtResource("26_rwifv")]
